{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 23,
  "lineage": "c3a4764a-35f7-9bad-2b95-327cfde70222",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:internet-gateway/igw-0ef9ae74fba8794ca",
            "id": "igw-0ef9ae74fba8794ca",
            "owner_id": "637423624556",
            "tags": {
              "Name": "tf_gw"
            },
            "tags_all": {
              "Name": "tf_gw"
            },
            "vpc_id": "vpc-017996c743b3142e1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf_lb_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:loadbalancer/app/tf-lb-test/e8e13f155145f967",
            "arn_suffix": "app/tf-lb-test/e8e13f155145f967",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-test-1217610018.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:loadbalancer/app/tf-lb-test/e8e13f155145f967",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-035c8883930703bfa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d72804500500e71"
              },
              {
                "subnet_id": "subnet-07a9128a98b785aa5"
              }
            ],
            "subnets": [
              "subnet-05d72804500500e71",
              "subnet-07a9128a98b785aa5"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-017996c743b3142e1",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.tf_sg_main",
            "aws_subnet.tf_subnet_main",
            "aws_subnet.tf_subnet_secondary",
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:listener/app/tf-lb-test/e8e13f155145f967/30b3b92857701213",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:targetgroup/tf-tg-main/ad7c95cc602316b7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:listener/app/tf-lb-test/e8e13f155145f967/30b3b92857701213",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:loadbalancer/app/tf-lb-test/e8e13f155145f967",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf_lb_test",
            "aws_lb_target_group.tf_tg_main",
            "aws_security_group.tf_sg_main",
            "aws_subnet.tf_subnet_main",
            "aws_subnet.tf_subnet_secondary",
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf_tg_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:targetgroup/tf-tg-main/ad7c95cc602316b7",
            "arn_suffix": "targetgroup/tf-tg-main/ad7c95cc602316b7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423624556:targetgroup/tf-tg-main/ad7c95cc602316b7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-tg-main",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-017996c743b3142e1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_route_tb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:route-table/rtb-0e54fae1c49529470",
            "id": "rtb-0e54fae1c49529470",
            "owner_id": "637423624556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef9ae74fba8794ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_route_tb"
            },
            "tags_all": {
              "Name": "tf_route_tb"
            },
            "timeouts": null,
            "vpc_id": "vpc-017996c743b3142e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_gw",
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faa3cb6cf81db724",
            "route_table_id": "rtb-0e54fae1c49529470",
            "subnet_id": "subnet-05d72804500500e71"
          },
          "dependencies": [
            "aws_internet_gateway.tf_gw",
            "aws_route_table.tf_route_tb",
            "aws_subnet.tf_subnet_main",
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025ba40ece1673559",
            "route_table_id": "rtb-0e54fae1c49529470",
            "subnet_id": "subnet-07a9128a98b785aa5"
          },
          "dependencies": [
            "aws_internet_gateway.tf_gw",
            "aws_route_table.tf_route_tb",
            "aws_subnet.tf_subnet_secondary",
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:security-group/sg-035c8883930703bfa",
            "description": "Allow HTTP/HTTPS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-035c8883930703bfa",
            "ingress": [],
            "name": "tf_sg_main",
            "name_prefix": "",
            "owner_id": "637423624556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_sg_main"
            },
            "tags_all": {
              "Name": "tf_sg_main"
            },
            "timeouts": null,
            "vpc_id": "vpc-017996c743b3142e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc_main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:subnet/subnet-05d72804500500e71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d72804500500e71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423624556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_main"
            },
            "tags_all": {
              "Name": "tf_subnet_main"
            },
            "vpc_id": "vpc-017996c743b3142e1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:subnet/subnet-07a9128a98b785aa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a9128a98b785aa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423624556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_secondary"
            },
            "tags_all": {
              "Name": "tf_subnet_secondary"
            },
            "vpc_id": "vpc-017996c743b3142e1"
          },
          "dependencies": [
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:vpc/vpc-017996c743b3142e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0514ff79365c4b890",
            "default_route_table_id": "rtb-05dd55fd9dec8ead5",
            "default_security_group_id": "sg-00546cb53e4e7483e",
            "dhcp_options_id": "dopt-0800a5bec22b3ad98",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017996c743b3142e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05dd55fd9dec8ead5",
            "owner_id": "637423624556",
            "tags": {
              "Name": "tf_vpc_main"
            },
            "tags_all": {
              "Name": "tf_vpc_main"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:security-group-rule/sgr-00e3e67d00f7845db",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00e3e67d00f7845db",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035c8883930703bfa",
            "security_group_rule_id": "sgr-00e3e67d00f7845db",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf_sg_main",
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423624556:security-group-rule/sgr-036eef7d58c31ed9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-036eef7d58c31ed9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035c8883930703bfa",
            "security_group_rule_id": "sgr-036eef7d58c31ed9b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf_sg_main",
            "aws_vpc.tf_vpc_main"
          ]
        }
      ]
    }
  ]
}